# orkia

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  NOTICE  PATENTS.md  PLUGIN_README.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  TRADEMARK.md  deny.toml  kernel-pubkey.hex  release-pubkey.pub  rust-toolchain.toml
bins/orkia/: Cargo.toml  README.md
bins/orkia-cage/: Cargo.toml
bins/orkia-cage/src/: lib.rs  linux_sb.rs  main.rs  sbpl.rs  toolset.rs
bins/orkia-cage/tests/: macos_cap_profile.rs  macos_cap_runtime.rs
bins/orkia-check/: Cargo.toml
bins/orkia-check/src/: cli.rs  main.rs  report.rs  runner.rs
bins/orkia-check/src/flows/: mod.rs  s3.rs  s4.rs  shared.rs
bins/orkia-forge-viewer/: Cargo.toml  build.rs  tauri.conf.json
bins/orkia-forge-viewer/src/: main.rs  shim.rs
bins/orkia-sh/: Cargo.toml
bins/orkia-sh/src/: core.rs  decide.rs  hook.rs  main.rs  verdict.rs
bins/orkia-sh/tests/: hook_mediation.rs
bins/orkia/src/: args.rs  auth_cli.rs  bridge.rs  daemon_cli.rs  dash_c.rs  dispatch_wiring.rs  forge_wiring.rs  journal_cli.rs  main.rs  mcp_bridge.rs  mcp_pipe.rs  pipeline_wiring.rs  pty_daemon.rs  repl_helpers.rs  seal_wiring.rs  signals.rs  tracing_setup.rs  update_cli.rs
bins/orkia/src/pty_daemon/: attach.rs  audit.rs  client_api.rs  daemon_jobs.rs  detached_spawner.rs  ipc_security.rs  job_forward.rs  journal_host.rs  journal_pump.rs  lock.rs  protocol.rs  recovery.rs  runtime_control.rs  runtime_spawn.rs  task_host.rs
bins/orkia/src/setup/: builtins.rs  mod.rs  prompts.rs  registry.rs  scaffold.rs  tools.rs  wizard.rs
bins/orkia/tests/: auth_e2e.rs  bridge_e2e.rs  cli_test.rs  daemon_runtime_test.rs  exit_status_e2e.rs  journal_e2e.rs  plain_output_test.rs  rfc_show_e2e.rs  setup_test.rs
bins/orkia/tests/support/: mod.rs
crates/orkia-app-builtin/: Cargo.toml
crates/orkia-app-builtin/src/: discover.rs  handlers.rs  lib.rs  parse.rs
crates/orkia-auth/: Cargo.toml  README.md
crates/orkia-auth/src/: lib.rs  provider.rs  store.rs
crates/orkia-builtin/: Cargo.toml  README.md
crates/orkia-builtin/src/: agent.rs  agent_templates.rs  approve.rs  briefing.rs  config.rs  every.rs  help.rs  history.rs  invite.rs  issue.rs  kill.rs  leave.rs  lib.rs  members.rs  migrate_rc.rs  project.rs  ps.rs  route.rs  scope_flag.rs  scope_validation.rs  share.rs  stream.rs  team.rs
crates/orkia-builtin/src/every/: binary_path.rs  crontab.rs  display.rs  migrate.rs  parse.rs  parse_tests.rs
crates/orkia-builtin/src/forge/: mod.rs  placeholders.rs  scaffold.rs  validate.rs
crates/orkia-builtin/src/migrate_rc/: tests.rs
crates/orkia-builtin/src/rfc/: actions.rs  mod.rs  model.rs  parse.rs
crates/orkia-builtin/tests/: agent_test.rs  ps_test.rs
crates/orkia-capabilities/: Cargo.toml
crates/orkia-capabilities/src/: lib.rs  plan.rs
crates/orkia-dispatch-proxy/: Cargo.toml
crates/orkia-dispatch-proxy/src/: compose.rs  issues.rs  lib.rs  oracle.rs  run.rs  seal.rs  spawn.rs
crates/orkia-dispatch-proxy/src/tests/: convergence.rs  fleet.rs  fresh.rs  mod.rs  resume.rs  support.rs
crates/orkia-e2e-harness/: Cargo.toml
crates/orkia-e2e-harness/src/: boot.rs  env.rs  error.rs  fixtures.rs  lib.rs  login.rs  pty.rs  scripts.rs  session.rs
crates/orkia-e2e-harness/src/assert/: backend.rs  files.rs  journal.rs  mod.rs  (+1 more)
crates/orkia-entities-core/: Cargo.toml  README.md
crates/orkia-entities-core/src/: account.rs  agent.rs  approval.rs  archetype.rs  cli_raw_event.rs  enums.rs  issue.rs  issue_branch.rs  issue_comment.rs  issue_event.rs  issue_share.rs  lib.rs  project.rs  project_clone.rs  rejection.rs  rfc.rs  rfc_message.rs  rfc_message_mention.rs  rfc_version.rs  seal_record.rs  shared_session_excerpt.rs  wire.rs  workspace.rs  workspace_invite.rs
crates/orkia-final-response/: Cargo.toml
crates/orkia-final-response/src/: extractor.rs  lib.rs  service.rs  storage.rs
crates/orkia-forge-build/: Cargo.toml
crates/orkia-forge-build/src/: hash.rs  lib.rs  manifest.rs  orchestration.rs  response.rs  write.rs
crates/orkia-forge-permissions/: Cargo.toml
crates/orkia-forge-permissions/src/: domain.rs  lib.rs
crates/orkia-forge-proxy/: Cargo.toml
crates/orkia-forge-proxy/src/: lib.rs
crates/orkia-forge-seal/: Cargo.toml
crates/orkia-forge-seal/examples/: verify_seal.rs
crates/orkia-forge-seal/src/: key.rs  lib.rs  record.rs  verifier.rs  writer.rs
crates/orkia-forge-seal/tests/: tamper.rs
crates/orkia-forge-types/: Cargo.toml
crates/orkia-forge-types/src/: bridge.rs  lib.rs  manifest.rs  naming.rs
crates/orkia-forge-viewer/: Cargo.toml
crates/orkia-forge-viewer/src/: bridge.rs  config.rs  journal.rs  lib.rs  network.rs  notify.rs  storage.rs
crates/orkia-journal-hub/: Cargo.toml
crates/orkia-journal-hub/src/: error.rs  hub.rs  lib.rs  listener.rs  listener_tests.rs  normalize.rs  notifications.rs  router.rs
crates/orkia-kernel/: Cargo.toml
crates/orkia-kernel-client/: Cargo.toml
crates/orkia-kernel-client/src/: codec.rs  lib.rs
crates/orkia-kernel-client/tests/: real_kernel_smoke.rs
crates/orkia-kernel-installer/: Cargo.toml
crates/orkia-kernel-installer/src/: daemon.rs  lib.rs  platform.rs
crates/orkia-kernel-trust/: Cargo.toml
crates/orkia-kernel-trust/src/: lib.rs
crates/orkia-kernel/src/: classify.rs  gate.rs  intelligence.rs  lib.rs  models.rs
crates/orkia-kernel/tests/: hotpath_intelligence.rs
crates/orkia-knowledge-mcp/: Cargo.toml
crates/orkia-knowledge-mcp/src/: handler.rs  lib.rs  rpc.rs
crates/orkia-magic-login/: Cargo.toml
crates/orkia-magic-login/src/: http.rs  lib.rs  metadata.rs  provider.rs
crates/orkia-mcp-pipe-server/: Cargo.toml
crates/orkia-mcp-pipe-server/src/: lib.rs
crates/orkia-mcp-pipe-server/tests/: server.rs
crates/orkia-pipeline-proxy/: Cargo.toml
crates/orkia-pipeline-proxy/src/: lib.rs  run.rs  tests.rs
crates/orkia-plugin-build/: Cargo.toml
crates/orkia-plugin-build/src/: bundle.rs  compile.rs  error.rs  lib.rs  pull.rs  transpile.rs
crates/orkia-plugin-build/tests/: compile_e2e.rs
(+529 files in other folders)
