[package]
name = "orkia-cli"
version = "0.1.0"
edition.workspace = true
license = "Elastic-2.0"

[[bin]]
name = "orkia"
path = "src/main.rs"

[dependencies]
orkia-shell = { workspace = true }
orkia-shell-types = { workspace = true }
orkia-shell-tui = { workspace = true }
orkia-terminal-core = { workspace = true }
orkia-builtin = { workspace = true }
orkia-auth = { workspace = true }
orkia-magic-login = { workspace = true }
orkia-capabilities = { workspace = true }
orkia-kernel-client = { workspace = true }
orkia-kernel-installer = { workspace = true }
orkia-kernel-trust = { workspace = true }
orkia-final-response = { workspace = true }
orkia-stage-exec = { workspace = true }
orkia-mcp-pipe-server = { workspace = true }
orkia-pipeline-proxy = { workspace = true }
orkia-forge-proxy = { workspace = true }
orkia-seal-proxy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
which = "8"
libc = { workspace = true }
reqwest = { workspace = true }
# Runtime dep (not just dev): `orkia update` stages downloads + SSHSIG
# verification material in a TempDir.
tempfile = "3"

[dev-dependencies]
tempfile = "3"
