[package]
name = "orkia-auth"
version = "0.1.0"
edition.workspace = true
rust-version = "1.85"
license = "Elastic-2.0"
description = "Neutral OS-level secret storage primitive + AuthProvider trait for the Orkia shell."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
keyring-core = "1"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
