[package]
name = "orkia-builtin"
version = "0.1.0"
edition.workspace = true
license = "Elastic-2.0"
description = "Builtin commands for the Orkia shell"

[dependencies]
orkia-shell-types = { workspace = true }
orkia-rfc-core = { workspace = true }
orkia-forge-types = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
# `orkia every` — natural-language → crontab. `cron` validates the
# expression we synthesise and computes the next scheduled occurrence
# for `every list`; `chrono` formats that timestamp.
cron = { workspace = true }
chrono = { workspace = true }
# Used by `every` to peek at the target agent's `agent.toml` and
# decide whether to bake `ORKIA_SCHEDULED_APPROVAL=required` into the
# crontab line (so the runtime knows to park results).
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
