[package]
name = "orkia-capabilities"
version = "0.1.0"
edition.workspace = true
license = "Elastic-2.0"
description = "Plan -> capability resolution for the Orkia shell"

[dependencies]
orkia-auth = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
