[package]
name = "orkia-entities-core"
version = "0.1.0"
edition.workspace = true
rust-version = "1.85"
license = "Elastic-2.0"
description = "Shared entity types for the Orkia ecosystem"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
orkia-rfc-core = { workspace = true }
