[package]
name = "orkia-final-response"
version = "0.1.0"
edition.workspace = true
license = "Elastic-2.0"
description = "Capture per-turn final assistant responses from Orkia-managed agents (SPEC-ORKIA-AGENT-FINAL-RESPONSE)"

[dependencies]
orkia-shell-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
