[package]
name = "orkia-forge-build"
version = "0.1.0"
edition.workspace = true
rust-version = "1.85"
license = "Elastic-2.0"
description = "Local build mechanics for Forge: filesystem writes, RFC hashing, manifest merge."

[dependencies]
orkia-forge-types = { workspace = true }
orkia-rfc-core = { workspace = true }
orkia-shell-types = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
