[package]
name = "orkia-forge-proxy"
version = "0.1.0"
edition.workspace = true
license = "Elastic-2.0"
description = "OSS ForgeBuilder that performs Forge builds by asking orkia-kernel to relay the authenticated HTTP call, then materializes the result locally"

[dependencies]
orkia-shell-types = { workspace = true }
orkia-auth = { workspace = true }
orkia-forge-build = { workspace = true }
orkia-forge-types = { workspace = true }
orkia-rfc-core = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
chrono = { workspace = true }
