[package]
name = "orkia-forge-types"
version = "0.1.0"
edition.workspace = true
rust-version = "1.85"
license.workspace = true
description = "Forge: shared types (manifest, bridge messages) for Orkia Forge apps"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
