[package]
name = "orkia-forge-viewer"
version = "0.1.0"
edition.workspace = true
rust-version = "1.85"
license = "Elastic-2.0"
description = "Forge: shared viewer (storage, bridge, journal client)"

[dependencies]
orkia-forge-types = { workspace = true }
orkia-forge-permissions = { workspace = true }
orkia-forge-seal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
# Pinned to 0.32 (libsqlite3-sys 0.30) to match orkia-reasoning-store and
# stay link-compatible with sqlx-sqlite when bundled by the proprietary binary.
rusqlite = { version = "0.32", features = ["bundled"] }
notify-rust = "4"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
http-body-util = "0.1"
tokio = { workspace = true }
