# Copyright 2026 Orkia
# SPDX-License-Identifier: Elastic-2.0
[package]
name = "orkia-journal-hub"
version = "0.1.0"
edition.workspace = true
license = "Elastic-2.0"
description = "Process-agnostic journal hub: orkia.sock listener, broadcast bus, and disk-backed subscribers (extracted from orkia-shell so the pty-daemon can host it)"

[dependencies]
orkia-shell-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
