[package]
name = "orkia-kernel-client"
version = "0.1.0"
edition.workspace = true
license = "Elastic-2.0"
description = "Local IPC client for the orkia-kernel daemon (JSON-RPC over Unix socket)"

[dependencies]
orkia-shell-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
