[package]
name = "orkia-kernel-installer"
version = "0.1.0"
edition.workspace = true
license = "Elastic-2.0"
description = "Download, verify, install, and register the orkia-kernel daemon"

[dependencies]
orkia-kernel-trust = { workspace = true }
base64 = "0.22"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
sha2 = { workspace = true }
