# Copyright 2026 Orkia
# SPDX-License-Identifier: Elastic-2.0
#
# orkia-kernel — the Orkia Intelligence gate (client side).
# Single crate that owns and gates ALL intelligence features: the login +
# premium gate, local model lifecycle (delegating to the kernel daemon over
# orkia-kernel-client), the classification wrapper, and the reasoning
# subsystem (consumer + enrich). Nothing reasoning-specific is constructed
# unless the gate says "on".
[package]
name = "orkia-kernel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
sha2.workspace = true
orkia-auth.workspace = true
orkia-capabilities.workspace = true
orkia-kernel-client.workspace = true
orkia-shell-types.workspace = true
orkia-reasoning-core.workspace = true
orkia-reasoning-store.workspace = true
orkia-reasoning-client.workspace = true
orkia-rfc-core.workspace = true

[dev-dependencies]
tempfile = "3"
axum = "0.7"
