[package]
name = "orkia-magic-login"
version = "0.1.0"
edition.workspace = true
rust-version = "1.85"
license = "Elastic-2.0"
description = "Magic-link AuthProvider for the public Orkia shell: emails a one-time code, exchanges it for a bearer, persists to the OS keychain."

[dependencies]
orkia-auth = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
