[package]
name = "orkia-mcp-pipe-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Elastic-2.0"
publish = false
description = "MCP stdio server exposing submit_pipeline_output for Team agent pipelines"

[lib]
name = "orkia_mcp_pipe_server"
path = "src/lib.rs"

[dependencies]
orkia-shell-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
